ACtivity object is commented in Build.xml

--- a/build.xml
+++ b/build.xml
@@ -260,8 +260,8 @@
 				<sf:include name="TaskDeleting"/>
 			</sf:typeset>
 			<sf:typeset name="objects">
-				<sf:include name="Task"/>
-				<sf:include name="Activity"/>
+				<!--<sf:include name="Task"/>-->
+				<!--<sf:include name="Activity"/>-->
 			</sf:typeset>
 		</deploy>
     </target>
