--- a/src/main/transformations/dev_sb_asia_cikorea/token.properties
+++ b/src/main/transformations/dev_sb_asia_cikorea/token.properties
@@ -6,7 +6,7 @@ OBJECT_ACCOUNT_PERSON_ACCOUNT_RECORTYPE_ID=012280000000f14
 OBJECT_CAMPAIGN_WEBLINK_CAC_CAMPAIGN_RECORD_TYPE_ID=012p00000004ISQ
 OBJECT_CAMPAIGN_WEBLINK_COMPLEX_EXECUTION_RECORD_TYPE_ID=012p00000004IST
 OBJECT_CAMPAIGN_WEBLINK_SIMPLE_EXECUTION_RECORD_TYPE_ID=012p00000004ISS
-OBJECT_CAMPAIGN_RECORDTYPE_CAC_CAMPAIGN_ID=012280000006I7d
+#OBJECT_CAMPAIGN_RECORDTYPE_CAC_CAMPAIGN_ID=012280000006I7d
 
 CENTRAL_OFFICE_QUEUE_ID=00Gp0000000Mbrv
 
