--- a/build.xml
+++ b/build.xml
@@ -293,6 +293,10 @@
 			   <sf:include name="Tasks"/>
                <sf:include name="Retailcopybutton"/>			   
 			</sf:typeset>
+			<sf:typeset name="layouts">
+				<sf:include name="Account.*"/>
+				<sf:include name="Case.*"/>
+			</sf:typeset>	
 			<sf:typeset name="classes">	
 				<sf:include name="TriggerHandlerIf"/>
 				<sf:include name="TriggerUtil"/>
