--- a/build.xml
+++ b/build.xml
@@ -136,6 +136,7 @@
 				<sf:include name="Account_Link__c"/>
 				<sf:include name="SSI__c"/>
 				<sf:include name="AreaCodeTranslation__mdt"/>
+				<sf:include name="Account_Object__mdt"/>
 			</sf:typeset>
 			<sf:typeset name="components"/>
 			<sf:typeset name="tabs">						
